--- a/src/compnents/Slider/Slider.less
+++ b/src/compnents/Slider/Slider.less
@@ -1,7 +1,7 @@
-.play_button {
+.slider {
     position: absolute;
-    left: 20px;
+    left: 200px;
+    right: 200px;
     bottom: 50px;
     transition: all 0.5s;
 }
-
