--- a/src/compnents/LeftSider/LeftSider.less
+++ b/src/compnents/LeftSider/LeftSider.less
@@ -6,7 +6,9 @@
     left: 20px;
     z-index: 999;
     border-radius: 20px;
-    display: flex;
+    vertical-align: middle;
+
+    display: inline-block;
     & > div {
         padding: 0 5px;
     }
