--- a/src/compnents/LeftSider/LeftSider.less
+++ b/src/compnents/LeftSider/LeftSider.less
@@ -1,14 +1,12 @@
 .selectors {
     position: absolute;
-    width: 30px;
-    height: 100px;
-    top: 140px;
-    left: 20px;
+    width: 100px;
+    height: 30px;
+    top: 85px;
+    left: 150px;
     z-index: 999;
     border-radius: 20px;
-    vertical-align: middle;
-
-    display: inline-block;
+    display: flex;
     & > div {
         padding: 0 5px;
     }
