--- a/src/compnents/MainBox/mainBox.less
+++ b/src/compnents/MainBox/mainBox.less
@@ -5,3 +5,9 @@
     transition: all 0.5s;
 }
 
+.traj_set{
+    position: absolute;
+    left: 20px;
+    bottom: 300px;
+    transition: all 0.5s;
+}
