--- a/src/compnents/LeftSider/LeftSider.less
+++ b/src/compnents/LeftSider/LeftSider.less
@@ -20,3 +20,9 @@
     left: 0;
     z-index: 999;
  }
+ .yearButton{
+    position: absolute;
+    right: 70px;
+    bottom: 80px;
+    z-index: 999;
+ }
