--- a/src/compnents/LeftSider/LeftSider.less
+++ b/src/compnents/LeftSider/LeftSider.less
@@ -13,14 +13,14 @@
 }
  .chartContainer{
     position: absolute;
-    height: 200px;
-    width: 100%;
     bottom: 0;
-    right: 0;
-    left: 0;
+    width: 80%;
+    right:0;
+    left:0;
+    margin: auto;
     z-index: 999;
  }
- .yearButton{
+ .yearModal{
     position: absolute;
     right: 70px;
     bottom: 80px;
