--- a/src/App.css
+++ b/src/App.css
@@ -89,12 +89,12 @@
 }
 .esri-component.esri-compass.esri-widget--button.esri-widget.esri-interactive{
   position: absolute;
-  left:100px;
+  left:30px;
   top:20px
 }
 .esri-component.esri-zoom.esri-widget{
   position: absolute;
-  left:20px;
+  left:80px;
   top:20px
 }
 .ant-timeline{
@@ -109,10 +109,13 @@
   overflow-y: auto
 }
 .ant-timeline-item-content:hover{
-  color: #4b7255;
+  color: deepskyblue;
   cursor: pointer;
   transition: 0.2s;
   transition-duration:0.5s;
+}
+.ant-timeline-item-head.ant-timeline-item-head-blue{
+  border-color: #63bbd0;
 }
 .ant-timeline-item-head.ant-timeline-item-head-custom.ant-timeline-item-head-blue{
   background-color: rgba(0,0,0,0.0);
