--- a/src/App.css
+++ b/src/App.css
@@ -154,3 +154,11 @@
   display: flex;
   justify-content: space-between;
 }
+
+/* .ant-btn.ant-btn-primary{
+  background-color: #f7de98;
+  border-color: #f7de98
+}
+.ant-switch.ant-switch-checked{
+  background-color: #f7de98;
+} */
