--- a/src/compnents/LeftSider/LeftSider.less
+++ b/src/compnents/LeftSider/LeftSider.less
@@ -22,7 +22,7 @@
  }
  .yearModal{
     position: absolute;
-    right: 70px;
-    bottom: 80px;
+    right: 530px;
+    top: 85px;
     z-index: 999;
  }
