--- a/src/App.css
+++ b/src/App.css
@@ -97,6 +97,11 @@
   left:80px;
   top:20px
 }
+.esri-component.esri-scale-bar.esri-widget{
+  position: absolute;
+  right:60px;
+  bottom:20px
+}
 .ant-timeline{
   position: absolute;
   top:20%;
@@ -155,10 +160,14 @@
   justify-content: space-between;
 }
 
-/* .ant-btn.ant-btn-primary{
-  background-color: #f7de98;
-  border-color: #f7de98
+.ant-btn.ant-btn-primary{
+  background-color: #0f95b0;
+  border-color: #0f95b0
+}
+.ant-btn.ant-btn-primary:hover{
+  background-color: #0f95b0b0;
+  border-color: #0f95b0b0
 }
 .ant-switch.ant-switch-checked{
-  background-color: #f7de98;
-} */
+  background-color: #0f95b0;
+}
